crates/eure-macros/tests/compile_fail/missing_from_eure_impl.rs
use eure::FromEure;

struct NoFromEure;

#[derive(FromEure)]
struct MyStruct {
    field: NoFromEure,
}

fn main() {}
