crates/eure-macros/tests/compile_fail/missing_from_eure_impl.stderr
error[E0277]: the trait bound `NoFromEure: FromEure<'_>` is not satisfied
 --> tests/compile_fail/missing_from_eure_impl.rs:5:10
  |
5 | #[derive(FromEure)]
  |          ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `FromEure<'_>` is not implemented for `NoFromEure`
 --> tests/compile_fail/missing_from_eure_impl.rs:3:1
  |
3 | struct NoFromEure;
  | ^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `FromEure<'doc>`:
            `&'doc NodeArray` implements `FromEure<'doc>`
            `&'doc PrimitiveValue` implements `FromEure<'doc>`
            `&'doc str` implements `FromEure<'doc>`
            `()` implements `FromEure<'doc>`
            `(A, B)` implements `FromEure<'doc>`
            `(A, B, C)` implements `FromEure<'doc>`
            `(A, B, C, D)` implements `FromEure<'doc>`
            `(A, B, C, D, E)` implements `FromEure<'doc>`
          and $N others
note: required by a bound in `RecordParser::<'doc>::parse_field`
 --> $WORKSPACE/crates/eure-document/src/parse/record.rs
  |
  |     pub fn parse_field<T>(&self, name: &str) -> Result<T, T::Error>
  |            ----------- required by a bound in this associated function
  |     where
  |         T: FromEure<'doc>,
  |            ^^^^^^^^^^^^^^ required by this bound in `RecordParser::<'doc>::parse_field`
  = note: this error originates in the derive macro `FromEure` (in Nightly builds, run with -Z macro-backtrace for more info)
